<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">BuyList</string>
    <string name="scan">Scan</string>
    <string name="find">Find</string>
    <string name="name">Product name</string>
    <string name="bar_code">Bar code</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="add_product">Add to list</string>
    <string name="emailSelector">Send your email in:</string>
    <string name="sendByEmail">Send by email</string>
    <string name="sendByMsg">Send by text message</string>
    <string name="validation">You must enter the name and bar code.</string>
    <string name="warning">Your android version do not support drag and drop.</string>
</resources>
