<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
	<TextView 
		android:id="@+id/title"
		android:text="@string/add_product"  
		android:layout_height="wrap_content" 
		android:layout_width="match_parent">
	</TextView>
	<EditText 
		android:id="@+id/name" 
		android:layout_width="match_parent" 
		android:layout_height="wrap_content" 
		android:text="@string/name"></EditText>
	<LinearLayout 
		android:id="@+id/tableRow1" 
		android:layout_width="match_parent" 
		android:layout_height="wrap_content">
	    	<EditText 
	    		android:id="@+id/code"
	    		android:text="@string/bar_code"  
	    		android:layout_height="match_parent" 
	    		android:layout_width="wrap_content">
	   		</EditText>
	    	<Button 
	    		android:id="@+id/scan" 
	    		android:layout_width="wrap_content" 
	    		android:layout_height="wrap_content" 
	    		android:text="@string/scan">
	   		</Button>
	</LinearLayout>
	<LinearLayout 
		android:id="@+id/linearLayout1" 
		android:layout_width="match_parent" 
		android:layout_height="wrap_content">
	    	<Button 
	    		android:id="@+id/add" 
	    		android:layout_width="wrap_content" 
	    		android:layout_height="wrap_content" 
	    		android:text="@string/save">
	   		</Button>
	    	<Button 
	    		android:id="@+id/cancel" 
	    		android:layout_width="wrap_content" 
	    		android:layout_height="wrap_content" 
	    		android:text="@string/cancel">
	   		</Button>
	</LinearLayout>
</LinearLayout>
